deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edukita-lms
spec:
  selector:
    app: edukita-lms
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
